# dynamic_fusion

./: .gitignore  CMakeLists.txt  README.md  build_test.sh
apps/: demo.cpp
kfusion/include/kfusion/: kinfu.hpp  optimisation.hpp  types.hpp  warp_field.hpp
kfusion/include/kfusion/cuda/: tsdf_volume.hpp
kfusion/src/: internal.hpp  kinfu.cpp  tsdf_volume.cpp  warp_field.cpp
kfusion/src/cuda/: imgproc.cu  tsdf_volume.cu
kfusion/src/utils/: dual_quaternion.hpp  quaternion.hpp
tests/opt/: CMakeLists.txt
